--- a/Chapter4.tex
+++ b/Chapter4.tex
@@ -129,7 +129,7 @@ telescope  &  discovers/VBZ/nmod:with\_inv \\
 
 
 \paragraph{Learning Methods}
-NER being a supervised learning task, we use an averaged structured perceptron \cite{Collins2002,Daume2006} to determine the tags of the named entities. We considered logistic regression and linear SVM. For the main experiments, we chose the perceptron because of its performance and the lower training time. On the other hand, for the analysis of the results, we use a logistic regression as it is considerably easier to interpret its results.
+NER being a supervised learning task, we use an averaged structured perceptron  \cite{Collins2002,Daume2006} (see Section \ref{sec:perceptron}) to determine the tags of the named entities. We considered logistic regression and linear SVM. For the main experiments, we chose the perceptron because of its performance and the lower training time. On the other hand, for the analysis of the results, we use a logistic regression as it is considerably easier to interpret its results, keeping in mind that our goal is to give some insights regarding the usefulness of our fusion methods.
 
 
 
