--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -1088,6 +1088,51 @@ publisher = "Wiley-Blackwell",
   journaltitle = {{ACM} Trans. Inf. Syst.},
 }
 
+
+@article{Luxburg2007,
+ author = {Luxburg, Ulrike},
+ title = {A Tutorial on Spectral Clustering},
+ journal = {Statistics and Computing},
+ issue_date = {December  2007},
+ volume = {17},
+ number = {4},
+ month = dec,
+ year = {2007},
+ issn = {0960-3174},
+ pages = {395--416},
+ numpages = {22},
+ url = {http://dx.doi.org/10.1007/s11222-007-9033-z},
+ doi = {10.1007/s11222-007-9033-z},
+ acmid = {1288832},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {Graph Laplacian, Spectral clustering},
+} 
+
+
+
+
+@article{Shi2000,
+ author = {Shi, Jianbo and Malik, Jitendra},
+ title = {Normalized Cuts and Image Segmentation},
+ journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+ issue_date = {August 2000},
+ volume = {22},
+ number = {8},
+ month = aug,
+ year = {2000},
+ issn = {0162-8828},
+ pages = {888--905},
+ numpages = {18},
+ url = {http://dx.doi.org/10.1109/34.868688},
+ doi = {10.1109/34.868688},
+ acmid = {351611},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
+
+
 @InProceedings{GoyalH14,
   author    = {Kartik Goyal and Eduard H. Hovy},
   title     = {Unsupervised Word Sense Induction using Distributional Statistics},
